ecmascript/parser/tests/test262-error-references/fail/8d732f3933df4bd4.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/8d732f3933df4bd4.js:1:5
  |
1 | var this
  |     ^^^^

